# sourcerer

./: .gitignore  README.md  matplotlibrc  pyproject.toml  setup.py
conf/: config.yaml
conf/base/: default.yaml
conf/experiment/: hh_dandi_decay_wasser_surro.yaml  ik_linear_decay_lml.yaml  ik_linear_decay_wasser_diff.yaml  ik_linear_decay_wasser_surro.yaml  lv_linear_decay_wasser_diff.yaml  sir_linear_decay_wasser_diff.yaml  slcp_linear_decay_lml.yaml  slcp_linear_decay_wasser_diff.yaml  slcp_linear_decay_wasser_surro.yaml  two_moons_linear_decay_lml.yaml  two_moons_linear_decay_wasser_diff.yaml  two_moons_linear_decay_wasser_surro.yaml
conf/simulator/: inverse_kinematics.yaml  lotka_volterra.yaml  sir.yaml  slcp.yaml  stub.yaml  two_moons.yaml
conf/source/: mll.yaml  wasserstein.yaml  wasserstein_hh.yaml
conf/source_model/: real_nvp.yaml  sampler.yaml
conf/surrogate/: load_hh_surrogate.yaml  load_surrogate.yaml  no_surrogate.yaml  train_surrogate.yaml
figures/: sweep_plots.py
figures/figure_hh/: figure_hh.py
figures/figure_ik/: figure_ik.py
figures/figure_lv/: figure_lv.py
notebooks/: benchmark_simulator_script.ipynb  benchmark_simulator_script.py  hh_script.ipynb  hh_script.py  hh_sims_and_stats.ipynb  hh_sims_and_stats.py
scripts/: lambda_sr2_hh_script.sh  lambda_sr2_script.sh
sourcerer/: ephys_extractor.py  ephys_features.py  fit_surrogate.py  hh_simulator.py  hh_utils.py  likelihood_estimator.py  real_nvp.py  sbi_classifier_two_sample_test.py  simulators.py  sliced_wasserstein.py  utils.py  wasserstein_estimator.py
(+1 files in other folders)
